tests/baselines/reference/parserMemberAccessAfterPostfixExpression1.errors.txt
tests/cases/conformance/parser/ecmascript5/Expressions/parserMemberAccessAfterPostfixExpression1.ts(1,4): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/Expressions/parserMemberAccessAfterPostfixExpression1.ts(1,1): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/Expressions/parserMemberAccessAfterPostfixExpression1.ts(1,5): error TS2304: Cannot find name 'toString'.


==== tests/cases/conformance/parser/ecmascript5/Expressions/parserMemberAccessAfterPostfixExpression1.ts (3 errors) ====
    a--.toString()
       ~
!!! error TS1005: ';' expected.
    ~
!!! error TS2304: Cannot find name 'a'.
        ~~~~~~~~
!!! error TS2304: Cannot find name 'toString'.